<resources>
    <string name="app_name">wavejet</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="back">Back</string>/()
    <string name="success">Success!</string>
    <string name="logout">Logout</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="tap_uns_deine_bpm_wir_versuchen_inhalte_basierend_deiner_jetzigen_angabe_zu_zeigen">Wie schnell hörstn so?</string>
    <string name="yes">YES!</string>
    <string name="egal">Egal</string>
    <string name="login">LOGIN</string>
    <string name="textview">TextView</string>
    <string name="bpm">BPM</string>
    <string name="natuerlich_kannst_du_sie_spaeter_immer_noch_aendern">Natürlich kannst du sie später immer noch ändern!;)</string>
    <string name="register">REGISTER</string>
    <string name="LOGO">TODO</string>
    <string name="btn_home">TODO</string>
    <string name="avatar">avatar</string>
    <string name="feedsimage">feedsimage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="musiclib">MusLib</string>
    <string name="BPMC">bpmCount</string>
    <string name="profile">Profile</string>
    <string name="events_txt_dash">Events</string>
    <string name="line_img2">TODO</string>
    <string name="return_btn">return_btn</string>
    <string name="pf_edit_btn">pf_edit_btn</string>
    <string name="edit">Edit</string>
    <string name="bpmc_result">count</string>
    <string name="bpmc_btn_txt">TAP</string>
</resources>