<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/we_own_the_night_a_generation_finds_its_identity_through_rave_culture_1">

        <ImageView
            android:id="@+id/logo_inapp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/LOGO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo1" />

        <TextView
            android:id="@+id/hf_tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:fontFamily="@font/anton"
            android:text="@string/success"
            android:textColor="#C1C1C1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/btn_bpm_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="#00000000"
            android:fontFamily="@font/anton"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textColorLink="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_success" />

        <TextView
            android:id="@+id/hf_tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:textColor="#C0C0C0"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bpm_yes"
            app:layout_constraintVertical_bias="0.100000024"
            tools:text="100" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_number">

            <Button
                android:id="@+id/hf_btn_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/hf_btn_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/anton"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:iconTint="@color/purple_200" />
        </LinearLayout>

        <Button
            android:id="@+id/miregal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:fontFamily="@font/anton"
            android:text="@string/egal"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/text_bpm_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/anton"
            android:text="@string/tap_uns_deine_bpm_wir_versuchen_inhalte_basierend_deiner_jetzigen_angabe_zu_zeigen"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#C4B6B7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_success" />

        <TextView
            android:id="@+id/bpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/bpm"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/hf_tv_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/hf_tv_number"
            app:layout_constraintTop_toTopOf="@+id/hf_tv_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>