<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bpm_back_wp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/LOGO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/bpmc_result_txt"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center|top"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="#62FA05"
        android:textSize="24sp"
        tools:text="@string/bpmc_result" />

    <Button
        android:id="@+id/bpmc_tap_btn"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/bpmc_btn_txt"
        app:cornerRadius="2000dp" />

</LinearLayout>