<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hf_tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/success"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/btn_bpm_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_success" />

        <TextView
            android:id="@+id/hf_tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_mono_one"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bpm_yes"
            app:layout_constraintVertical_bias="0.100000024"
            tools:text="0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_number">

            <Button
                android:id="@+id/hf_btn_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_mono_one"
                android:text="@string/minus"
                android:textColor="#7C4DFF" />

            <Button
                android:id="@+id/hf_btn_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_mono_one"
                android:text="@string/plus"
                android:textColor="#7C4DFF"
                app:iconTint="@color/purple_200" />
        </LinearLayout>

        <Button
            android:id="@+id/miregal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/egal"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/text_bpm_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/tap_uns_deine_bpm_wir_versuchen_inhalte_basierend_deiner_jetzigen_angabe_zu_zeigen"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hf_tv_success" />

        <TextView
            android:id="@+id/bpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/bpm"
            app:layout_constraintBottom_toBottomOf="@+id/hf_tv_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/hf_tv_number"
            app:layout_constraintTop_toTopOf="@+id/hf_tv_number" />

        <TextView
            android:id="@+id/bpm_infotext_mini"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/nat_rlich_kannst_du_sie_sp_ter_immer_noch_ndern"
            android:textAlignment="viewStart"
            android:textSize="6sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_bpm_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_bpm_info"
            app:layout_constraintVertical_bias="0.36" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>